1.完成初步版本报表 2.首页完成30% 3.订单和排产页面重写，剩余部分操作未对接 4.详情页返回已解决
5.登陆未完成

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>T-MES</title>
+  <script type = "application/x-javascrip" src="../app/utils/echarts.js"></script>
 </head>
 <body>
   <div class="root" id="root" style="height:100%"></div>
